--- a/res/values-ko/arrays.xml
+++ b/res/values-ko/arrays.xml
@@ -17,8 +17,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string-array name="automatic_storage_management_days">
-    <item msgid="4262697175462957945">"30일 이전"</item>
-    <item msgid="2920779420892632946">"60일 이전"</item>
-    <item msgid="1402081670011072896">"90일 이전"</item>
+    <item msgid="4262697175462957945">"30일 이상 경과"</item>
+    <item msgid="2920779420892632946">"60일 이상 경과"</item>
+    <item msgid="1402081670011072896">"90일 이상 경과"</item>
   </string-array>
 </resources>
