--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -17,8 +17,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string-array name="automatic_storage_management_days">
-    <item msgid="4262697175462957945">"३० दिनभन्दा बढी पुरानो"</item>
-    <item msgid="2920779420892632946">"६० दिनभन्दा बढी पुरानो"</item>
-    <item msgid="1402081670011072896">"९० दिनभन्दा बढी पुरानो"</item>
+    <item msgid="4262697175462957945">"कम्तीमा ३० दिन पुरानो"</item>
+    <item msgid="2920779420892632946">"कम्तीमा ६० दिन पुरानो"</item>
+    <item msgid="1402081670011072896">"कम्तीमा ९० दिन पुरानो"</item>
   </string-array>
 </resources>
