--- a/res/values-az/arrays.xml
+++ b/res/values-az/arrays.xml
@@ -17,8 +17,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string-array name="automatic_storage_management_days">
-    <item msgid="4262697175462957945">"30 gündən köhnədir"</item>
-    <item msgid="2920779420892632946">"60 gündən köhnədir"</item>
-    <item msgid="1402081670011072896">"90 gündən köhnədir"</item>
+    <item msgid="4262697175462957945">"30 gündən köhnə"</item>
+    <item msgid="2920779420892632946">"60 gündən köhnə"</item>
+    <item msgid="1402081670011072896">"90 gündən köhnə"</item>
   </string-array>
 </resources>
