--- a/res/values-b+sr+Latn/arrays.xml
+++ b/res/values-b+sr+Latn/arrays.xml
@@ -17,8 +17,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string-array name="automatic_storage_management_days">
-    <item msgid="4262697175462957945">"Starije od 30 dana"</item>
-    <item msgid="2920779420892632946">"Starije od 60 dana"</item>
-    <item msgid="1402081670011072896">"Starije od 90 dana"</item>
+    <item msgid="4262697175462957945">"Старије од 30 дана"</item>
+    <item msgid="2920779420892632946">"Старије од 60 дана"</item>
+    <item msgid="1402081670011072896">"Старије од 90 дана"</item>
   </string-array>
 </resources>
